<resources>
    <string name="app_name">CookNStore</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="shopping_list">Shopping List</string>
    <string name="manage_category">Manage Category</string>
    <string name="import_export">Import/Export</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">close</string>
    <string name="add_recipe">Add a recipe</string>
    <string name="title_activity_create_recipe">CreateRecipe</string>
    <string name="continue_button">Continue</string>

    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="serves">Serves</string>
    <string name="time">Total time</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="quantity">Quantity</string>
    <string name="browse_picture">Picture</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string-array name="units_volume_array">
        <item>unit</item>
        <item>tsp.</item>
        <item>tbsp.</item>
        <item>fl oz</item>
        <item>cup</item>
        <item>pint</item>
        <item>quart</item>
        <item>gallon</item>
        <item>ml</item>
        <item>l</item>
        <item>lb</item>
        <item>oz</item>
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
        <item>mm</item>
        <item>cm</item>
        <item>inch</item>
    </string-array>
    <string-array name="units_weight_array">
        <item>--</item>
        <item>lb</item>
        <item>oz</item>
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
        <item>mm</item>
        <item>cm</item>
        <item>inch</item>
    </string-array>
    <string-array name="units_length_array">
        <item>mm</item>
        <item>cm</item>
        <item>inch</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_recipe">NewRecipeActivity</string>
    <string name="title_activity_new_recipe_activity_next">NewRecipeActivityNext</string>
    <string name="title_activity_recipe_details_view">RecipeDetailsView</string>
    <string name="Recipe">Recipe</string>
    <string name="Directions">Directions:</string>
    <string name="Ingredients">Ingredients:</string>
    <string name="title_activity_shopping_list">ShoppingList</string>
    <string name="negative_button">Cancel</string>
    <string name="positive_button">OK</string>
    <string name="title_activity_shopping_list_view">Shopping Lists</string>
    <string name="title_activity_new_shoppingl_list">NewShoppinglListActivity</string>
    <string name="title_activity_new_shopping_list">NewShoppingListActivity</string>
    <string name="backup">Backup Recipes</string>
    <string name="importR">import</string>
    <string name="search_recipe">Search</string>
    <string name="title_activity_recipe_search">RecipeSearch</string>
    <string name="search_hint"> Search Recipe</string>
</resources>
